--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "enum": "2.1.0",
     "express": "^4.7.2",
     "extract-text-webpack-plugin": "^0.3.5",
+    "fbjs": "^0.8.16",
     "file-loader": "^0.8.1",
     "flux": "^2.0.1",
     "fs": "0.0.2",
@@ -45,7 +46,7 @@
     "i18next-resource-store-loader": "0.0.2",
     "immutable": "^3.7.2",
     "items-store": "^0.4.2",
-    "javascript-algorithms": "mgechev/javascript-algorithms",
+    "javascript-algorithms": "github:mgechev/javascript-algorithms",
     "jquery": "^2.1.3",
     "jquery-mockjax": "^1.6.2",
     "jquery.transit": "^0.9.12",
@@ -65,6 +66,7 @@
     "object-assign": "^2.0.0",
     "perfect-scrollbar": "^0.6.1",
     "react": "^0.13.2",
+    "react-dom": "^16.3.1",
     "react-hot-loader": "^1.0.0",
     "react-proxy-loader": "^0.3.1",
     "react-router": "^0.13.2",
@@ -72,6 +74,7 @@
     "react-tap-event-plugin": "^0.1.6",
     "style-loader": "^0.8.2",
     "superagent": "^0.21.0",
+    "textarea-caret": "component/textarea-caret-position",
     "textarea-caret-position": "component/textarea-caret-position",
     "url-loader": "^0.5.5",
     "uuid": "^2.0.1",
